<resources>
    <string name="app_name">Voice Memos</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_storage_path">Storage Path</string>
    <string name="pref_rate">Rate</string>
    <string name="pref_encoding">Encoding</string>
    <string name="pref_pause_when_calls">Pause recording during calls</string>
    <string name="pref_silence_mode">Silent mode</string>
    <string name="pref_app_theme">Application Theme</string>
    <string name="pref_summary_pause_when_calls">Pause recording on answering the call and continue on hangup</string>
    <string name="pref_summary_silence_mode">Put phone in silent mode while recording</string>
    <string name="reload_app">Please reload the app to save changes.</string>

    <!-- Recording -->
    <string name="no_result">No result</string>
    <string name="share_app">Share</string>
    <string name="share_with">Share with:</string>
    <string name="share_sub_text">The Greatest Audio Recorder App</string>
    <string name="share_body">Try this cool and professional application:</string>
    <string name="menu_welcome_page">Welcome page</string>

    <!-- OnBoardingScreenActivity -->
    <string name="permission_denied">Permission denied</string>
    <string name="permission_accepted">Permission accepted</string>

    <!-- OnBoardingScreenActivity -->
    <string name="accept_permission">Accept</string>
    <string name="accepted_permission">Accepted</string>

    <!-- OnBoardingScreenActivity -->
    <string name="file_saved">File saved</string>
    <string name="audio_record_error">AudioRecord error:</string>

    <!-- OnBoardingScreen -->
    <string name="obs_title1">Welcome</string>
    <string name="obs_title2">Authorisations</string>
    <string name="obs_title3">Phone state</string>
    <string name="obs_title4">Have fun !</string>
    <string name="obs_description1">With this application, save whatever you want in any place, with high sound quality, without internet need.</string>
    <string name="obs_description2">You must accept the storage access permission, so the app can save and read your records.\n We also need phone authorization, to pause recording if you receive a phone call.</string>
    <string name="obs_description3">In order to mute your phone while recording, you must accept this permission.\n(Only for android Marshmallow and higher)</string>
    <string name="obs_description4">Are you ready ?\nLet\'s start right now !</string>
    <string name="obs_btn_next">Next</string>
    <string name="obs_btn_previous">Back</string>
    <string name="obs_btn_finish">Finish</string>
    <string name="obs_btn_accept_permission">Agree</string>

    <string-array name="sample_rate_text">
        <item>48 kHz</item>
        <item>44.1 kHz (CD)</item>
        <item>32 kHz</item>
        <item>22 kHz</item>
        <item>16 kHz (default)</item>
        <item>11 kHz</item>
        <item>8 kHz (telephone)</item>
    </string-array>

    <string-array name="sample_rate_values" translatable="false">
        <item>48000</item>
        <item>44100</item>
        <item>32000</item>
        <item>22050</item>
        <item>16000</item>
        <item>11025</item>
        <item>8000</item>
    </string-array>

    <string-array name="encodings_text">
        <item>.wav (default)</item>
        <item>.m4a</item>
    </string-array>

    <string-array name="encodings_values" translatable="false">
        <item>wav</item>
        <item>m4a</item>
        <item>3gp</item>
    </string-array>

    <string-array name="themes_text">
        <item>Theme White (default)</item>
        <item>Theme Dark</item>
    </string-array>

    <string-array name="themes_values" translatable="false">
        <item>Theme_White</item>
        <item>Theme_Dark</item>
    </string-array>

    <string name="recording_notification_name">Recording</string>
    <string name="recording_notification_description">You see this notification when you start recording, this notification is very important to keep recording running in the background</string>
    <string name="recording_notification_id">recording</string>

    <string name="save_records_folder_name" translatable="false">VoiceMemos by Omar</string>
    <string name="not_permitted">Not permitted</string>
    <string name="shared_via">"Shared via %1$s"</string>
    <string name="rename_recording">Rename Recording</string>
    <string name="file_not_found">File not found</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">"Are you sure ? "</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="hold_by_call">pause (hold by call)</string>
    <string name="encoding">encoding</string>
    <string name="pause">pause</string>
    <string name="edit">edit</string>
    <string name="confirm_cancel">Confirm cancel</string>
    <string name="are_you_sure_cancel">Are you sure you want to cancel?</string>
    <string name="recording">recording</string>
    <string name="encoding_title">Encoding...</string>
    <string name="recording_title">Recording</string>
    <string name="db">dB</string>
    <string name="days_symbol">"d"</string>
    <string name="title_header">%1$s free ~ %2$s left</string>
    <string name="size_gb">%1$.1f GB</string>
    <string name="size_mb">%1$.1f MB</string>
    <string name="size_kb">%1$.1f kb</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>

    <string name="date_format">yyyy-MM-dd</string>
</resources>
